--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             <p><b>Librarian</b></p>
                         </td>
                         <td>
-                            <img src="D:\Sarthak\exp-13\virat sign.png" alt="Principal" height="25" width="75">
+                            <img src="https://github.com/sarthaksalve/idcard/blob/main/virat%20sign.png" alt="Principal" height="25" width="75">
                             <p><b>Principal</b></p>
                         </td>
                     </tr>
