--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <fieldset>
         <div class="vertical-text">ENGINEERING</div>
         <form>
-            <img src="D:\Sarthak\exp-13\zeal college logo 2.jpeg" alt="" height="100" width="250"><br>
+            <img src="zeal college logo 2.jpeg" alt="" height="100" width="250"><br>
             <p><b>Zeal college of engineering and research, Pune</b></p>
             <address>
                 S. No. 39,
